--- a/2020-02-24/.project
+++ b/2020-02-24/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>2020-02-24</name>
+	<name>Project_Woorizip(200225)</name>
 	<comment></comment>
 	<projects>
 	</projects>
